[metadata]
name = dbtenv
version = attr: dbtenv.__version__
description = dbtenv lets you easily install and run multiple versions of dbt using pip with Python virtual environments, or optionally using Homebrew on Mac or Linux.
long_description = file: README.md
long_description_content_type = text/markdown
author = Brooklyn Data Co.
author_email = hello@brooklyndata.co
url = https://github.com/brooklyn-data/dbtenv
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = dbtenv
python_requires = >=3.7

[options.entry_points]
console_scripts =
    dbtenv = dbtenv.main:main
